classDiagram
  class Sucursal {
    -String direccion
    -Empleado empleado
    -Consulta consulta

    +new()
    +agregarEmpleado()
    +agregarConsulta()
  }
  class Empleado {
    -Int numeroDocumento
    -String nombres
    -String apellido
    -Date fechaNacimiento
    -Date fechaIngreso
    -Sucursal sucursal
    -EstadoEmpleado estado

    +new()
    
  }

  class DetalleEmpleado {
    -Bool estudia
    -Int cantidad

    +new()
    +verificarEstadoEmpleado()
  }

  class Requerimiento {
    -String nombre
    -String descripcion

    +new()
  }

  class Perro {
    -Int numeroHistoriaClinica
    -String nombre
    -Date fechaNacimiento
    -Raza raza
    -Float pesoActual
    -Float alturaActual
    -Personas historialMascotas

    +new()
    +generarNumHistoriaClinica()
    +verificarPersona()
    +identificarVacunacion()
  }
  class HistorialMascotas {
    -String estadoPerro
    -String rolPersona

    +new()
    +verificarEstadoPerro()
    +verificarRolPersona()
  }
  class Persona {
    -String nombrePersona
    -Int numDocPersona
    -String descripcion

    +new()
  }
  class Raza {
    -String denominacion
    -Float pesoMinimoMachos
    -Float pesoMaximoMachos
    -Float pesoMinimoHembras
    -Float pesoMaximoHembras
    -Float alturaMediaMachos
    -Float alturaMediaHembras
    -Float cuidadosEspeciales

    +new()
  }
  class Consulta {
    -Int numeroOrden
    -Date fechaEntrada
    -String sintomas
    -String diagnosticos
    -String medicamento
    -Date fechaSalida
    -String listaEmpleados

    +new()
    +verificarPersona()
    +verificarRolEmpleadoConsulta()
    +identificarNumHistoriaClinica()
    +recetarMedicamentos()
    +verificarPerro()
  }
  class RegistroConsulta{
    -String urls
    -String devolucionConsulta
    -String receta

    +new()
    +generarDevolucionConsulta()
    +generarReceta()
    +verificarMedicamentos()
    +verificarVacunas()
    +verificarPerro()
    +verificarEmpleado()
  }
  class RolEmpleadoConsulta {
    -String rolConsulta
    -String descripcion

    +new()
    +identificarEmpleado()
    +identificarNumConsulta()
  }
  class Vacunacion {
    -Vacunacion vacunacion
    -Date fechaProgramada
    -Date fechaReal
    -String descripcion

    +new()
  }
  class HistorialRol {
    -Date fechaInicio
    -Date fechaFin
    -String descripcion

    +new()
    +verificarFechaFinal()
  }
  class Rol {
    -String nombre
    -String descripcion

    +new()
  }
  class HistorialEmpleado {
    -Date fechaInicio
    -Date fechaFin
    -String descripcion

    +new()
    +verificarFechaFin()
  }
  class EstadoEmpleado {
    -String estado
    -String descripcion

    +new()
  }
  class Vacuna {
    -Vacuna vacuna
    -String nombreVacuna
    -String laboratorio
    -String dosis

    +new()
  }
  class Medicamento {
    -Medicamento medicamento
    -String nombreMedicamento
    -String laboratorio
    -Date fechaUltimaCompra
    -Int cantidadExistente
    -Int cantidadMinima

    +new()
  }

  Consulta --> RolEmpleadoConsulta
  RolEmpleadoConsulta --> Empleado
  HistorialMascotas <-- Persona
  Sucursal --> Consulta
  Empleado <-- Sucursal
  Empleado --> DetalleEmpleado
  DetalleEmpleado --> Requerimiento
  Empleado --> HistorialEmpleado
  HistorialEmpleado --> EstadoEmpleado
  Empleado --> HistorialRol
  HistorialRol --> Rol
  Perro <-- Consulta
  Perro --> Vacunacion
  Vacunacion --> Vacuna
  Consulta --> RegistroConsulta
  RegistroConsulta --> Medicamento
  RegistroConsulta --> Vacuna
  Consulta <-- Persona
  HistorialMascotas --> Perro
  Perro --> Raza